[tool.poetry]
name = "jupyterhub-ssh"
version = "0.1.0"
description = "SSH access to JupyterHubs"
authors = [
    "Jan Philipp Schneider <jp-schneider@users.noreply.github.com>",
    "Yuvi Panda <yuvipanda@gmail.com>"
]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "jupyterhub_ssh"}]

[tool.poetry.dependencies]
python = "^3.7"
jupyterhub = "^3.1.1"
asyncssh = "^2.13.2"
aiohttp = "^3.8.5"
yarl = "^1.9.2"
websockets = "^11.0.3"
async-timeout = "^4.0.2"


[tool.poetry.group.dev.dependencies]
chartpress = "^2.1.0"
pytest = "^7.4.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
